# tkinter_overhauled

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
src/com.name.winui-as-ttk/: __init__.py  tools.py
src/com.name.winui-as-ttk/tclinter/: __init__.py
tests/: __init__.py
