[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "com.name.winui-as-ttk"
authors = [{ name="Neomi Inciso Mendoza", email="neoincisomendoza+python@gmail.com" }]
version = "0.0.1"
requires-python = ">=3.10"
dynamic = [
    "version",
    "requires-python",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "WinU 2.5.0.0 as a Python 3 package"
keywords = [
    "winui",
    "ttk",
    "windows-gui",
    "windows-ui",
    "ui",
    "gui",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/neoincisomendoza/winu-as-ttk"
Issues = "https://github.com/neoincisomendoza/winu-as-ttk/issues"
