[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "live.neomi.tkinter_overhaul"
authors = [{ name="Neomi Inciso Mendoza", email="neoincisomendoza+python@gmail.com" }]
version = "0.0.1"
requires-python = ">=3.10"
dynamic = [
    "version",
    "requires-python",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "`tkinter.py` overhaul"
keywords = [
    "tcl",
    "ttk",
    "tk",
    "ui",
    "gui",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/neoincisomendoza/tkinter_overhauled"
Issues = "https://github.com/neoincisomendoza/tkinter_overhauled/issues"
