[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live.neomi.tkinter_overhaul"
authors = [{ name = "Neomi Inciso Mendoza", email = "neoincisomendoza+python@gmail.com" }]
dynamic = ["version", "requires-python"]
license = { file = "LICENSE" }
description = "`tkinter.py` overhaul"
keywords = ["tcl", "ttk", "tk", "ui", "gui"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/neoincisomendoza/tkinter_overhauled"
Issues = "https://github.com/neoincisomendoza/tkinter_overhauled/issues"
Documentation = "https://github.com/neoincisomendoza/tkinter_overhauled/wiki"
Roadmaps = "https://github.com/neoincisomendoza/tkinter_overhauled/projects?query=is%3Aopen"

[tool.hatch.version]
path = "src/live/neomi/tkinter_overhauled/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests", "docs", "build", "dist", ".git", ".github", ".vscode", ".gitignore", ".gitattributes", ".gitmodules", ".gitkeep"]

[tool.hatch.build.targets.wheel]
packages = ["src/live/neomi/tkinter_overhauled"]